Bug 187239 - Message body doesn't have charset with attachments
Summary: Message body doesn't have charset with attachments
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-15 17:12 UTC by Henrik Pauli
Modified: 2009-03-22 22:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henrik Pauli 2009-03-15 17:12:38 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

When I reply to an e-mail and supply an attachment, the main body will not have a charset in the header.

The received e-mail has this in the main part:

------------=_1237106374-16227-4391
Content-Type: text/plain;
  charset="utf-8"
Content-Transfer-Encoding: quoted-printable

The one I send will have:

--Boundary-00=_vCRvJgGpKZCcc1S
Content-Type: text/plain
Content-Transfer-Encoding: quoted-printable

with the content in quoted-printable escaped UTF-8.

The attachment, however, will have for example:

--Boundary-00=_vCRvJgGpKZCcc1S
Content-Type: application/x-shellscript;
  name="createdev"
Content-Transfer-Encoding: quoted-printable
Content-Disposition: attachment;
	filename="createdev"

as expected...  and my signature:

--Boundary-00=_vCRvJgGpKZCcc1S
Content-Disposition: inline
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: 8bit

Correctly UTF-8.


So in short:
Experienced behaviour: the message body has no charset tag, going against all logic and KMail's settings.

Expected behaviour: the message "body" should keep the charset tag as received (if possible) or otherwise attempt to fall back to the first applicable charset (as mentioned in the KMail configuration).
Comment 1 Henrik Pauli 2009-03-15 17:14:30 UTC
(In reply to comment #0)
> Version:            (using Devel)

The KDE 4.2.65 snapshot released on FTP, more precisely.
Comment 2 Jaime Torres 2009-03-18 17:45:05 UTC
It works for me in svn trunk r939757 (kde 4.2.66).
Comment 3 Henrik Pauli 2009-03-22 19:25:11 UTC
(In reply to comment #2)
> It works for me in svn trunk r939757 (kde 4.2.66).

I’m afraid it’s still there for me on 4.2.67.svn940805.
Comment 4 Thomas McGuire 2009-03-22 22:33:22 UTC
SVN commit 942916 by tmcguire:

When using late attachments, make sure to restore the charset
of the text body part correctly.

This was yet another fallout from my refactoring after the HTML images
were added.

BUG: 187239


 M  +8 -0      messagecomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942916