When using late attachments, make sure to restore the charset of the text body part correctly.

This was yet another fallout from my refactoring after the HTML images
were added.

BUG: 187239

svn path=/trunk/KDE/kdepim/; revision=942916